app/assets/stylesheets/custom.css.scss
/* ========= SECTION: STYLE VARIABLES =========*/


$orange: #F18419;
$dark-orange:#DB7817;

$dempoints-blue:#215B7F;
$light-blue:#6799B2;
$light-blue-2:#addbdb;
/* greys */
$light-grey: #F2F2F2;
$background-grey: #f6f6f6;
$line-grey: #D6D6D6;
$dark-grey: #666A73;
$text-grey: #787878;

/* greens */

$dark-green: #46724C;
$aqua: #00746b;
$light-teal: #EDFCF8;
$light-green: #DBF2DE;


$dark-red: #D41528;


/* ========= END SECTION: STYLE VARIABLES =========*/


/* ========= SECTION: UNIVERSALS =========*/

.pad-top{
	padding-top:40px;
}

a:hover{
		text-decoration:none !important;
}

body {
	font-family: 'Oxygen', sans-serif !important;
	font-size:15px;
	height:100%;

}

h2{
	font-family: 'Oxygen', sans-serif !important;
	color:$dempoints-blue;
}

.hidden{
	display:none;
}

.center-alignment {
	text-align:center;
}

.feed-text{
	line-height:25px;
}

.feed-subtext{
	font-size:12px;
}
.row {min-width:100%;}

/* ========= END SECTION: UNIVERSALS =========*/

html {
	overflow: hidden;
}

#sidebar { 
	background-color:$dempoints-blue;
	float: left;
	left: 220px;
	margin-left: -220px;
	position: relative;
	width: 90px;
	overflow-y: auto;
}

#insidebar{
	background-color:$light-grey;
	float: left;
	left: 220*2px;
	margin-left: -350px;
	position: relative;
	width: 0px;
	overflow-y: auto;
}

#contentWrapper { 
	float: left;
	width: 100%;
}

#content {
	margin-left:90px;
	padding-left:20px;
	overflow-y: auto;
}


.bold{
	font-weight:700;
}

.navbar{
	height: 100%;
	background-color:$dempoints-blue;
	padding:15px 0px 0px 30px;
	font-size:18px !important;
	line-height:50px;
	a{
		color:#9b9b9b;
	}
	a:hover{
		color:white;
	};
}


.logo{
	padding:40px 60px 15px 30px;
	background-color:$dempoints-blue;
	img{
		width:97px;
		height:29px;
	}
}



textarea {
    height: 150px;
}


.home-bar-area{
    position: fixed;
    bottom: 93%;
    right: 2%;
}


.grey-area{
	color:#505050;
}

.homepage{
	padding-top:90px;
}
.sign-in-area{
	color:$dark-grey;
	border-radius:4px;
	text-align:left;
	padding:30px 20px;
	background-color:$background-grey;
	border:1px solid $background-grey;
	h5{
		color:#3a3a3a;
	}
	h6{
		font-size:13px;
		color:$dark-grey;
	}
}

.item-border{
	border-bottom:1px solid $light-grey;
	border-top:1px solid $light-grey;
	padding:15px 0px;
	margin:15px 0px;
	
}

.button{
	margin-bottom:-40px;
}

.footer{
	padding-top:80px;
}

.copywrite{
	line-height:30px;
	color:$dark-grey;
}

.nav-item{
	padding:10px 0px;
	a{color:$light-blue-2;}
	img{
		
	}
}

.discussion-area{
	border:1px solid $light-grey;
	padding:15px;
	line-height:20px;
	p{font-size:13px !important;}


}

.discussion-form{
	textarea{
		height:100px !important;
	}
}

.original{
	background-color:$light-grey
}

.discussion-subarea{
	border-right:2px solid red;
	height:100%;
}
.post-call{
	padding:20px 0px 5px;
}

.discussions{
	padding-bottom:40px;
}

.insidebar{
	padding:20px 0px 0px 20px;
}

.inside-text{
	padding:5px 0px 5px 20px;
	font-size:11px;
	font-weight:700;
	background-color:$dark-grey;
	color:white;
}

.insidebar-item{
	
	font-size:18px;
	padding:13px 0px;
}

.nav-collapse{
	position:fixed;
	bottom:0px;
	width:90px;
	height:60px;
	padding:15px 15px 50px 30px;
}

.navbar-text{
	display:none;
}
.nav-collapse:hover{
	background-color:$light-blue;
}

#navbar-expand{
	display:none;
}

.company-box{
	height:100px;
}

.test2{
	padding-top:60px;	
	background:url('/assets/bg1.jpg');
	background-repeat: no-repeat;
	background-size:cover;
	height:700px;
	background-position: 50% 80%;
	background-color: rgba(31, 91, 127, 0.9);
	.row{
		background-color: rgba(31, 91, 127, 0.9);
	}
}

.test-tag{
	padding:20px 0px 0px 0px;
}

.test2signup{
	color:white !important;
	text-align:center;	
	padding:40px;
//	background-color: rgba(31, 91, 127, 0.9);
	h2{color:white;}
	h5{color:#addbdb}
//	 opacity:0.6;	
}



body {
    padding: 0px;    
}

#slide-area {
    position: absolute;
    margin: 0px;
    padding: 0px;
    width: 100%;
    height: 500px;
    overflow: hidden;  
}

.box {
    position: absolute;
    width: 100%;
    height: 100%;
	padding:40px;
    left: 50%;
    top: 40px;
    margin-left: -50%;
	h5{color:$dempoints-blue;}
	color:$dark-grey;
}

#box1 {
    background-color: $light-grey;
    left: -100%;
}

#box2 {
    background-color: $light-grey;
}

#box3 {
    background-color: $light-grey;
    left: 300%;
}

#box4 {
    background-color: $light-grey;
    left: 300%;
}

#box5 {
    background-color: blue;
    left: 300%;
}

.bottom-message{
	padding-top:100px;
	font-size:10px;
	color:$dempoints-blue;
}

.onboarding-comment{
	padding:20px;
	margin-top:20px;
	background-color:white;

	border:1px solid $dark-grey;
}

.onboarding-message{
	line-height:25px !important;	
}

